hphp/hack/test/typecheck/higher_kinded_types/anonymous_hk_parameters.php.rust_elab.exp
File "anonymous_hk_parameters.php", line 5, characters 12-12:
Wildcard typehints are not allowed in this position (Naming[2084])
File "anonymous_hk_parameters.php", line 8, characters 12-12:
Wildcard typehints are not allowed in this position (Naming[2084])
File "anonymous_hk_parameters.php", line 5, characters 12-12:
Cannot use anonymous type parameter in this position. (Naming[2115])
File "anonymous_hk_parameters.php", line 8, characters 12-12:
Cannot use anonymous type parameter in this position. (Naming[2115])
